# python-market-data-downloader

./: .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  DESIGN.md  MILESTONES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
docs/adr/: README.md
docs/api/: README.md
docs/assets/: README.md
examples/: README.md
examples/basic/: README.md
src/python_market_data_downloader/: __init__.py  download_plan.py  downloader.py  errors.py  models.py  normalization.py  planning.py  provider.py  summary.py
tests/: __init__.py  test_downloader.py  test_models.py  test_planning.py  test_provider.py  test_repository_structure.py
